made changes in pom.xml and config files

--- a/apache_camel_usecase/Apache_Camel - First Req/pom.xml
+++ b/apache_camel_usecase/Apache_Camel - First Req/pom.xml
@@ -61,11 +61,11 @@
             <artifactId>camel-activemq</artifactId>
             <version>${camel.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
-            <version>${activemq.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.activemq</groupId>-->
+<!--            <artifactId>activemq-broker</artifactId>-->
+<!--            <version>${activemq.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
