--- a/apache_camel_usecase/Apache_Camel - First Req/src/main/resources/application.properties
+++ b/apache_camel_usecase/Apache_Camel - First Req/src/main/resources/application.properties
@@ -11,12 +11,12 @@ app.error.categoryNotFound=Category not found
 app.error.invalidPrice=0
 server.port=8081
 
-#camel.component.activemq.broker-url=tcp://localhost:61616
-#camel.component.activemq.user=admin
-#camel.component.activemq.password=admin
+
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+camel.servlet.mapping.context-path=/camel/*
 #-------------------------------------------------------------------------------
 
 #spring.activemq.in-memory=true
@@ -29,3 +29,7 @@ spring.activemq.password=admin
 #camel.component.activemq.username=admin
 #camel.component.activemq.password=admin
 
+
+#camel.component.activemq.broker-url=tcp://localhost:61616
+#camel.component.activemq.user=admin
+#camel.component.activemq.password=admin
