pojo for 2 requirements working fine

--- a/apache_camel_usecase/Apache_Camel - First Req/src/main/resources/application.properties
+++ b/apache_camel_usecase/Apache_Camel - First Req/src/main/resources/application.properties
@@ -15,6 +15,8 @@ server.port=8081
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+spring.activemq.packages.trust-all=false
+spring.activemq.trusted-packages=java.util,com.UST.Apache_Camel
 
 camel.servlet.mapping.context-path=/camel/*
 #-------------------------------------------------------------------------------
