--- a/apache_camel_usecase/Apache_Camel - Second Req/src/main/resources/application.properties
+++ b/apache_camel_usecase/Apache_Camel - Second Req/src/main/resources/application.properties
@@ -15,6 +15,8 @@ server.port=8082
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+spring.activemq.packages.trust-all=false
+spring.activemq.trusted-packages=java.util,com.UST.Apache_Camel
 
 #---------------------------------
 
